# smp-tp10-thomascharlestp10

./: .gitignore  CMakeLists.txt
include/: funct.h
src/: funct.cpp  main.cpp
